Version 1.3.16+svn:
 * language and i18n:
   * updated translations: Catalan, Esperanto, Slovak, Spanish, Valencian
 * tinygui:
   * fixed fontsize for the clock
   * removed $RACE entry when using tinygui
   * fixed replay theme in tinygui to display correctly
 * user interface:
   * quick replays no longer scroll to leaders
   * scrolling to the leader the very first time happens instantly now
 * miscellaneous and bug fixes:
   * replays of midgame saves get the right recall list now (bug #10868)
   * Fixed controller problems when reloading MP game (bug #11046 and bit more)
   
Version 1.3.16:
 * campaigns:
   * Two Brothers: set the leader of scenario one to passive to make it not
     too easy to win
 * language and i18n:
   * updated translations: Chinese, Czech, Dutch, Filipino, Finnish, German,
     Greek, Hungarian, Italian, Lithuanian, Polish, Slovak, Spanish, Turkish
   * replaced the font used for the chiense translation (gkai00mp.ttf) with a
     subset of WQY (just the gb2312 part is included) as requested by the
     chinese maintainer
 * map editor:
   * the editor handles errors with the old unsupported map format more
     graceful (bug #11023)
 * multiplayer:
   * revised maps: The Freelands
   * don't display 'Remote scenario' for reloaded games in the multiplayer
     lobby which is wrong in most cases (fixes bug #10882), the display
     of 'Reloaded game' is disabled for now because of the string freeze
   * Fixed MP saves loadind to choose correct human side (bug #10894)
   * display reloaded games in yellow instead of green in the game list
     as they are also a kind of already running games
   * Made era not required while loading save game
   * Removed bogus client commands about takeing side
   * Fixed control change when giving own team (bug #6639)
   * when loading a savegame don't offer to take the non-player sides (bug
     #10746)
 * units:
   * balancing changes:
     * decreased the village defense of Bats from 60% to 40%