@@ -111,6 +111,7 @@ public:
 		bool share_maps, share_view;
 		bool disallow_observers;
 		bool allow_player;
+		bool no_leader;
 
 		std::string music;
 
@@ -257,6 +258,7 @@ public:
 	void set_auto_shroud_updates(bool value) { auto_shroud_updates_ = value; }
 	bool get_disallow_observers() {return info_.disallow_observers; };
 	std::string map_colour_to() const { return info_.colour; };
+	bool& no_leader()  { return info_.no_leader; }
 
 	static int nteams();
 
